模組補丁修正

--- a/Patch-ResourcePack/assets/immersiveengineering/lang/zh_tw.json
+++ b/Patch-ResourcePack/assets/immersiveengineering/lang/zh_tw.json
@@ -30,6 +30,7 @@
 	"block.immersiveengineering.radiator":"散熱器模組",
 
 	"item.immersiveengineering.ersatz_leather": "人造皮革",
+	"item.immersiveengineering.component_electronic": "電子元件",
 	"item.immersiveengineering.component_electronic_adv": "進階電子元件",
 	"item.immersiveengineering.plate_duroplast": "導電樹脂板",
 	"item.immersiveengineering.dust_coke": "焦炭粉",
